--- a/BallScrew.ui
+++ b/BallScrew.ui
@@ -301,7 +301,7 @@ qproperty-diameter: 20;
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="page1">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -600,21 +600,18 @@ font: 15pt bold;</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Vel21"/>
-           </item>
-           <item row="4" column="0">
-            <widget class="QLabel" name="label_42">
+           <item row="1" column="0">
+            <widget class="QLabel" name="label_48">
              <property name="text">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Линейное ускорение гайки, мм/c&lt;span style=&quot; vertical-align:super;&quot;&gt;2&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string>Шаг ШВП, мм</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QDoubleSpinBox" name="spnPitch21"/>
+           <item row="0" column="1">
+            <widget class="QDoubleSpinBox" name="spnGear21"/>
            </item>
-           <item row="2" column="1">
-            <widget class="QDoubleSpinBox" name="spnTravel21"/>
+           <item row="3" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Vel21"/>
            </item>
            <item row="2" column="0">
             <widget class="QLabel" name="label_43">
@@ -623,15 +620,21 @@ font: 15pt bold;</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="QDoubleSpinBox" name="spnGear21"/>
-           </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_48">
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_42">
              <property name="text">
-              <string>Шаг ШВП, мм</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Линейное ускорение гайки, мм/c&lt;span style=&quot; vertical-align:super;&quot;&gt;2&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Accel21"/>
+           </item>
+           <item row="1" column="1">
+            <widget class="QDoubleSpinBox" name="spnPitch21"/>
+           </item>
+           <item row="2" column="1">
+            <widget class="QDoubleSpinBox" name="spnTravel21"/>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_44">
@@ -640,8 +643,19 @@ font: 15pt bold;</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Accel21"/>
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_46">
+             <property name="text">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Коэффициент редукции, 1/c&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="1">
+            <widget class="QDoubleSpinBox" name="spnMicrostep21">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+            </widget>
            </item>
           </layout>
          </widget>
@@ -689,30 +703,10 @@ font: 15pt bold;</string>
            <string>Кинематические параметры</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_8">
-           <item row="0" column="1">
-            <widget class="QDoubleSpinBox" name="spnGear22"/>
-           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_24">
              <property name="text">
               <string>Частота вращения, об/мин</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_28">
-             <property name="text">
-              <string>Передаточное число</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Vel22"/>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_25">
-             <property name="text">
-              <string>КПД</string>
              </property>
             </widget>
            </item>
@@ -726,6 +720,43 @@ font: 15pt bold;</string>
              </property>
              <property name="value">
               <double>0.900000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_28">
+             <property name="text">
+              <string>Передаточное число</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Vel22"/>
+           </item>
+           <item row="0" column="1">
+            <widget class="QDoubleSpinBox" name="spnGear22"/>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_25">
+             <property name="text">
+              <string>КПД</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_27">
+             <property name="text">
+              <string>Коэффициент редукции, 1/c</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="1">
+            <widget class="QDoubleSpinBox" name="spnMicrostep22">
+             <property name="enabled">
+              <bool>false</bool>
+             </property>
+             <property name="decimals">
+              <number>3</number>
              </property>
             </widget>
            </item>
@@ -817,20 +848,40 @@ font: 15pt bold;</string>
            <string>Кинематические параметры</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_10">
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_8">
+           <item row="6" column="0">
+            <widget class="QLabel" name="label_11">
              <property name="text">
-              <string>Ход, мм</string>
+              <string>Перемещение при измерении, мм</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QDoubleSpinBox" name="spnPitch23"/>
+           </item>
+           <item row="6" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Dsp_Measure23"/>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_12">
+             <property name="text">
+              <string>Скорость холостого хода, мм/мин</string>
              </property>
             </widget>
            </item>
            <item row="5" column="1">
             <widget class="QDoubleSpinBox" name="spnNom_Accel_Idle23"/>
            </item>
-           <item row="6" column="0">
-            <widget class="QLabel" name="label_11">
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_18">
              <property name="text">
-              <string>Перемещение при измерении, мм</string>
+              <string>Ускорение холостого хода, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_8">
+             <property name="text">
+              <string>Ход, мм</string>
              </property>
             </widget>
            </item>
@@ -841,10 +892,29 @@ font: 15pt bold;</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="0">
-            <widget class="QLabel" name="label_12">
+           <item row="4" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Vel_Idle23"/>
+           </item>
+           <item row="3" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Dsp_Idle23"/>
+           </item>
+           <item row="7" column="1">
+            <widget class="QDoubleSpinBox" name="spnNom_Vel_Measure23"/>
+           </item>
+           <item row="1" column="1">
+            <widget class="QDoubleSpinBox" name="spnGear23"/>
+           </item>
+           <item row="8" column="0">
+            <widget class="QLabel" name="label_19">
              <property name="text">
-              <string>Скорость холостого хода, мм/мин</string>
+              <string>Ускорение при измерении, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_7">
+             <property name="text">
+              <string>Шаг ШВП, мм/об</string>
              </property>
             </widget>
            </item>
@@ -858,44 +928,19 @@ font: 15pt bold;</string>
              </property>
             </widget>
            </item>
-           <item row="4" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Vel_Idle23"/>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_7">
-             <property name="text">
-              <string>Шаг ШВП, мм/об</string>
+           <item row="9" column="1">
+            <widget class="QDoubleSpinBox" name="spnMicrostep23">
+             <property name="enabled">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
-           <item row="7" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Vel_Measure23"/>
-           </item>
-           <item row="3" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Dsp_Idle23"/>
-           </item>
-           <item row="6" column="1">
-            <widget class="QDoubleSpinBox" name="spnNom_Dsp_Measure23"/>
-           </item>
-           <item row="1" column="1">
-            <widget class="QDoubleSpinBox" name="spnGear23"/>
-           </item>
-           <item row="5" column="0">
-            <widget class="QLabel" name="label_18">
+           <item row="9" column="0">
+            <widget class="QLabel" name="label_20">
              <property name="text">
-              <string>Ускорение холостого хода, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Коэффициент редукции, 1/c&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
             </widget>
-           </item>
-           <item row="8" column="0">
-            <widget class="QLabel" name="label_19">
-             <property name="text">
-              <string>Ускорение при измерении, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QDoubleSpinBox" name="spnPitch23"/>
            </item>
           </layout>
          </widget>
@@ -1151,6 +1196,39 @@ font: 15pt bold;</string>
            <string>Кинематические параметры</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_12">
+           <item row="4" column="1">
+            <widget class="QSpinBox" name="spnNom_Accel_Coeff24"/>
+           </item>
+           <item row="1" column="1">
+            <widget class="QSpinBox" name="spnPitch24"/>
+           </item>
+           <item row="0" column="1">
+            <widget class="QSpinBox" name="spnGear24"/>
+           </item>
+           <item row="3" column="0">
+            <widget class="QLabel" name="label_39">
+             <property name="text">
+              <string>Скорость вращения приводного вала, об/мин</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="0">
+            <widget class="QLabel" name="label_36">
+             <property name="text">
+              <string>Ход, мм</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_29">
+             <property name="text">
+              <string>Ускорение, %</string>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QSpinBox" name="spnNom_Travel24"/>
+           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_40">
              <property name="text">
@@ -1165,39 +1243,20 @@ font: 15pt bold;</string>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QSpinBox" name="spnPitch24"/>
-           </item>
-           <item row="0" column="1">
-            <widget class="QSpinBox" name="spnGear24"/>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_36">
-             <property name="text">
-              <string>Ход, мм</string>
-             </property>
-            </widget>
-           </item>
            <item row="3" column="1">
             <widget class="QSpinBox" name="spnNom_Omega24"/>
            </item>
-           <item row="4" column="1">
-            <widget class="QSpinBox" name="spnNom_Accel_Coeff24"/>
-           </item>
-           <item row="4" column="0">
-            <widget class="QLabel" name="label_29">
-             <property name="text">
-              <string>Ускорение, %</string>
+           <item row="5" column="1">
+            <widget class="QSpinBox" name="spnMicrostep24">
+             <property name="enabled">
+              <bool>false</bool>
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
-            <widget class="QSpinBox" name="spnNom_Travel24"/>
-           </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_39">
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_35">
              <property name="text">
-              <string>Скорость вращения приводного вала, об/мин</string>
+              <string>Коэффициент редукции, 1/c</string>
              </property>
             </widget>
            </item>
